; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_gxf.c_gxf_probe.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_gxf.c_gxf_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@gxf_probe.startcode = internal constant [6 x i32] [i32 0, i32 0, i32 0, i32 0, i32 1, i32 188], align 16
@gxf_probe.endcode = internal constant [6 x i32] [i32 0, i32 0, i32 0, i32 0, i32 225, i32 226], align 16
@AVPROBE_SCORE_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @gxf_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gxf_probe(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32*, i32** %5, align 8
  %7 = call i32 @memcmp(i32* %6, i32* getelementptr inbounds ([6 x i32], [6 x i32]* @gxf_probe.startcode, i64 0, i64 0), i32 24)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %18, label %9

9:                                                ; preds = %1
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 -8
  %14 = call i32 @memcmp(i32* %13, i32* getelementptr inbounds ([6 x i32], [6 x i32]* @gxf_probe.endcode, i64 0, i64 0), i32 24)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %18, label %16

16:                                               ; preds = %9
  %17 = load i32, i32* @AVPROBE_SCORE_MAX, align 4
  store i32 %17, i32* %2, align 4
  br label %19

18:                                               ; preds = %9, %1
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %18, %16
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @memcmp(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
